[package]
name = "hnsw_rs"
version = "0.1.0"
edition = "2024"
authors = ["ronakgh97@gmail.com"]
description = "A Simple implementation of the HNSW (Hierarchical Navigable Small World) algorithm for efficient approximate nearest neighbor search."
license = "MIT"
repository = "https:/github.com/ronakgh97/hnsw_rs"
homepage = "https:/github.com/ronakgh97/hnsw_rs"
documentation = "https:/github.com/ronakgh97/hnsw_rs/master/README.md"

[lib]
name = "hnsw_rs"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.102"
rayon = "1.11.0"
wincode = { version = "0.5.1", features = ["derive"] }
rand = "0.10.0"
wide = "1.2.0"