[package]
name = "hnsw_rs"
version = "0.1.0"
edition = "2024"
authors = ["ronakgh97@gmail.com"]
description = "A Simple implementation of the HNSW (Hierarchical Navigable Small World) algorithm for efficient approximate nearest neighbor search."
license = "MIT"
repository = "https:/github.com/ronakgh97/hnsw-rs"
homepage = "https:/github.com/ronakgh97/hnsw-rs"
documentation = "https:/github.com/ronakgh97/hnsw-rs/master/README.md"

[lib]
name = "hnsw_rs"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.dev]
opt-level = 1
debug = true
incremental = true

[dependencies]
wincode = { version = "0.5.2", features = ["derive"] }
rand = "0.10.1"
ahash = "0.8.12"
rayon = "1.12.0"
wide = "1.3.0"
anyhow = "1.0.102"
memmap2 = "0.9.10"
sha2 = "0.11.0"
hex = "0.4.3"
fastrand = "2.4.1"

[dev-dependencies]
arrow = "58.1.0"
parquet = "58.1.0"
plotters = "0.3.7"